Compiler/tests/typing/bad/testfile-field-6.rs

struct S { a: i32 }
fn main() { let x = S { a: 42 }; let p = &x; p.b; }
